# 3sem

./: OS3.txt
DA2/: CMakeLists.txt  DA2  a.out  check.cpp  data.cpp  data.h  dddd.txt  gmon.out  gprof.txt  load.txt  main.cpp  makefile  massif.out.1802  rbtree.cpp  rbtree.h  run.sh  run2.sh  save.txt  test  test.tree  test1.cpp
DA4/: CMakeLists.txt  a.out  gmon.out  lab  main.cpp
DA4_2/: 1  2  4  CMakeLists.txt  gmon.out  lab  lab.cpp  labd  labwithedebuh.cpp  main.cpp  rand  randomdata.cpp  search  search.cpp
DA5/: CMakeLists.txt  suffixTr.cpp  tree
OOP2/: CMakeLists.txt  Rectangle2.cpp  Rectangle2.h  TArray.cpp  TArray.h  TArrayItem.h  main.cpp
OOP3/: CMakeLists.txt  Figure.h  Figure.h.gch  Rectangle.cpp  Rectangle.h  Rhomb.h  TArrayItem.h  Tarray.cpp  Tarray.h  Trapeze.cpp  Trapeze.h  a.out  main.cpp
OOP4/: CMakeLists.txt  Rhomb.cpp  TArray.h  TArrayItem.h  TemplateArray.h  Trapeze.cpp  main.cpp
OOP5/: CMakeLists.txt  Rectangle.cpp  TArray.cpp  TArrayItem.h  TIterator.h  TemplateArray.h  Trapeze.h  main.cpp
OOP6/: CMakeLists.txt  Rectangle.cpp  Rectangle.h  Rhomb.cpp  Rhomb.h  TAllocator.cpp  TArrayItem.cpp  (+5 more)
OOP7/: CMakeLists.txt  IRemoveCriteriaALL.h  Makefile  Rectangle.cpp  Rectangle.h  RemoveCriteria.h  Rhomb.cpp  Rhomb.h  TAllocator.cpp  TAllocator.h  TArrayItem.cpp  TArrayItem.h  TBinaryTree.cpp  TBinaryTree.h  TNode.h  Trapeze.cpp  Trapeze.h  lab  main.cpp
OOP8/: CMakeLists.txt  Rectangle.cpp  Rectangle.h  Rhomb.cpp  Rhomb.h  TAllocator.cpp  TAllocator.h  TArrayItem.cpp  TArrayItem.h  TemplateArray.h  Trapeze.cpp  main.cpp  make  makefile
OOP_7/: CMakeLists.txt  IRemoveCriteria.h  IRemoveCriteriaByValue.h  Rectangle.cpp  Rectangle.h  Rhomb.cpp  Rhomb.h  TAllocator.cpp  TAllocator.h  TArrayItem.cpp  TArrayItem.h  TBinaryTree.h  TemplateArray.h  Trapeze.cpp  Trapeze.h  main.cpp
OS6/: .swp  CMakeLists.txt  TVector.c  TVector.h  async-s-c.c  cl_ex.c  client  client_ex.c  hb_collector.c  hb_server.c  hb_workers.c  hbc  hbclient  hbcollector  hbserver  hbw  hbworkers  recomp  ser_ex.c  server  server.c  server_ex.c  test.txt
(+123 files in other folders)
